@@ -66,11 +66,13 @@ import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import joptsimple.ArgumentAcceptingOptionSpec;
 import joptsimple.OptionSpec;
@@ -112,11 +114,7 @@ public abstract class TopicCommand {
             }
         } catch (ExecutionException e) {
             Throwable cause = e.getCause();
-            if (cause != null) {
-                printException(cause);
-            } else {
-                printException(e);
-            }
+            printException(Objects.requireNonNullElse(cause, e));
             exitCode = 1;
         } catch (Throwable e) {
             printException(e);
@@ -157,12 +155,11 @@ public abstract class TopicCommand {
         return ret;
     }
 
-    @SuppressWarnings("deprecation")
     private static Properties parseTopicConfigsToBeAdded(TopicCommandOptions opts) {
         List<List<String>> configsToBeAdded = opts.topicConfig().orElse(Collections.emptyList())
             .stream()
             .map(s -> Arrays.asList(s.split("\\s*=\\s*")))
-            .collect(Collectors.toList());
+            .toList();
 
         if (!configsToBeAdded.stream().allMatch(config -> config.size() == 2)) {
             throw new IllegalArgumentException("requirement failed: Invalid topic config: all configs to be added must be in the format \"key=val\".");
@@ -204,7 +201,7 @@ public abstract class TopicCommand {
      *                           If set to true, the command will throw an exception if the topic with the
      *                           requested name does not exist.
      */
-    private static void ensureTopicExists(List<String> foundTopics, Optional<String> requestedTopic, Boolean requireTopicExists) {
+    private static void ensureTopicExists(List<String> foundTopics, Optional<String> requestedTopic, boolean requireTopicExists) {
         // If no topic name was mentioned, do not need to throw exception.
         if (requestedTopic.isPresent() && !requestedTopic.get().isEmpty() && requireTopicExists && foundTopics.isEmpty()) {
             // If given topic doesn't exist then throw exception
@@ -212,7 +209,7 @@ public abstract class TopicCommand {
         }
     }
 
-    private static List<String> doGetTopics(List<String> allTopics, Optional<String> topicIncludeList, Boolean excludeInternalTopics) {
+    private static List<String> doGetTopics(List<String> allTopics, Optional<String> topicIncludeList, boolean excludeInternalTopics) {
         if (topicIncludeList.isPresent()) {
             IncludeList topicsFilter = new IncludeList(topicIncludeList.get());
             return allTopics.stream()
@@ -234,7 +231,7 @@ public abstract class TopicCommand {
      *                             If set to true, the command will throw an exception if the topic with the
      *                             requested id does not exist.
      */
-    private static void ensureTopicIdExists(List<Uuid> foundTopicIds, Uuid requestedTopicId, Boolean requireTopicIdExists) {
+    private static void ensureTopicIdExists(List<Uuid> foundTopicIds, Uuid requestedTopicId, boolean requireTopicIdExists) {
         // If no topic id was mentioned, do not need to throw exception.
         if (requestedTopicId != null && requireTopicIdExists && foundTopicIds.isEmpty()) {
             // If given topicId doesn't exist then throw exception
@@ -260,11 +257,11 @@ public abstract class TopicCommand {
             configsToAdd = parseTopicConfigsToBeAdded(options);
         }
 
-        public Boolean hasReplicaAssignment() {
+        public boolean hasReplicaAssignment() {
             return !replicaAssignment.isEmpty();
         }
 
-        public Boolean ifTopicDoesntExist() {
+        public boolean ifTopicDoesntExist() {
             return opts.ifNotExists();
         }
     }
@@ -275,9 +272,9 @@ public abstract class TopicCommand {
         private final Integer numPartitions;
         private final Integer replicationFactor;
         private final Config config;
-        private final Boolean markedForDeletion;
+        private final boolean markedForDeletion;
 
-        public TopicDescription(String topic, Uuid topicId, Integer numPartitions, Integer replicationFactor, Config config, Boolean markedForDeletion) {
+        public TopicDescription(String topic, Uuid topicId, Integer numPartitions, Integer replicationFactor, Config config, boolean markedForDeletion) {
             this.topic = topic;
             this.topicId = topicId;
             this.numPartitions = numPartitions;
@@ -306,13 +303,13 @@ public abstract class TopicCommand {
         private final String topic;
         private final TopicPartitionInfo info;
         private final Config config;
-        private final Boolean markedForDeletion;
+        private final boolean markedForDeletion;
         private final PartitionReassignment reassignment;
 
         PartitionDescription(String topic,
                              TopicPartitionInfo info,
                              Config config,
-                             Boolean markedForDeletion,
+                             boolean markedForDeletion,
                              PartitionReassignment reassignment) {
             this.topic = topic;
             this.info = info;
@@ -321,11 +318,11 @@ public abstract class TopicCommand {
             this.reassignment = reassignment;
         }
 
-        public Integer minIsrCount() {
+        public int minIsrCount() {
             return Integer.parseInt(config.get(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG).value());
         }
 
-        public Boolean isUnderReplicated() {
+        public boolean isUnderReplicated() {
             return getReplicationFactor(info, reassignment) - info.isr().size() > 0;
         }
 
@@ -333,15 +330,15 @@ public abstract class TopicCommand {
             return info.leader() != null;
         }
 
-        public Boolean isUnderMinIsr() {
+        public boolean isUnderMinIsr() {
             return !hasLeader() ||  info.isr().size() < minIsrCount();
         }
 
-        public Boolean isAtMinIsrPartitions() {
+        public boolean isAtMinIsrPartitions() {
             return minIsrCount() == info.isr().size();
         }
 
-        public Boolean hasUnavailablePartitions(Set<Integer> liveBrokers) {
+        public boolean hasUnavailablePartitions(Set<Integer> liveBrokers) {
             return !hasLeader() || !liveBrokers.contains(info.leader().id());
         }
 
@@ -443,9 +440,7 @@ public abstract class TopicCommand {
         }
 
         private static Admin createAdminClient(Properties commandConfig, Optional<String> bootstrapServer) {
-            if (bootstrapServer.isPresent()) {
-                commandConfig.put(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, bootstrapServer.get());
-            }
+            bootstrapServer.ifPresent(s -> commandConfig.put(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, s));
             return Admin.create(commandConfig);
         }
 
@@ -475,7 +470,7 @@ public abstract class TopicCommand {
                 }
 
                 Map<String, String> configsMap = topic.configsToAdd.stringPropertyNames().stream()
-                    .collect(Collectors.toMap(name -> name, name -> topic.configsToAdd.getProperty(name)));
+                    .collect(Collectors.toMap(name -> name, topic.configsToAdd::getProperty));
 
                 newTopic.configs(configsMap);
                 CreateTopicsResult createResult = adminClient.createTopics(Collections.singleton(newTopic),
@@ -519,7 +514,7 @@ public abstract class TopicCommand {
             String topicName) {
             if (topic.hasReplicaAssignment()) {
                 try {
-                    Integer startPartitionId = topicsInfo.get(topicName).get().partitions().size();
+                    int startPartitionId = topicsInfo.get(topicName).get().partitions().size();
                     Map<Integer, List<Integer>> replicaMap = topic.replicaAssignment.entrySet().stream()
                         .skip(startPartitionId)
                         .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
@@ -552,7 +547,7 @@ public abstract class TopicCommand {
             // If topicId is provided and not zero, will use topicId regardless of topic name
             Optional<Uuid> inputTopicId = opts.topicId()
                 .map(Uuid::fromString).filter(uuid -> !uuid.equals(Uuid.ZERO_UUID));
-            Boolean useTopicId = inputTopicId.isPresent();
+            boolean useTopicId = inputTopicId.isPresent();
 
             List<Uuid> topicIds;
             List<String> topics;
@@ -588,7 +583,7 @@ public abstract class TopicCommand {
 
             List<String> topicNames = topicDescriptions.stream()
                 .map(org.apache.kafka.clients.admin.TopicDescription::name)
-                .collect(Collectors.toList());
+                .toList();
             Map<ConfigResource, KafkaFuture<Config>> allConfigs = adminClient.describeConfigs(
                 topicNames.stream()
                     .map(name -> new ConfigResource(ConfigResource.Type.TOPIC, name))
@@ -668,7 +663,7 @@ public abstract class TopicCommand {
             List<Uuid> allTopicIds = allTopics.listings().get().stream()
                 .map(TopicListing::topicId)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
             return allTopicIds.contains(topicIdIncludeList) ?
                 Collections.singletonList(topicIdIncludeList) :
                 Collections.emptyList();
@@ -698,8 +693,6 @@ public abstract class TopicCommand {
         private final ArgumentAcceptingOptionSpec<String> topicOpt;
 
         private final ArgumentAcceptingOptionSpec<String> topicIdOpt;
-
-        private final String nl;
 
         private static final String KAFKA_CONFIGS_CLI_SUPPORTS_ALTERING_TOPIC_CONFIGS =
                 " (To alter topic configurations, the kafka-configs tool can be used.)";
@@ -767,7 +760,7 @@ public abstract class TopicCommand {
                 .withRequiredArg()
                 .describedAs("topic-id")
                 .ofType(String.class);
-            nl = System.lineSeparator();
+            String nl = System.lineSeparator();
 
             String logConfigNames = LogConfig.nonInternalConfigNames().stream().map(config -> "\t" + config).collect(Collectors.joining(nl));
             configOpt = parser.accepts("config",  "A topic configuration override for the topic being created." +
@@ -826,7 +819,7 @@ public abstract class TopicCommand {
             checkArgs();
         }
 
-        public Boolean has(OptionSpec<?> builder) {
+        public boolean has(OptionSpec<?> builder) {
             return options.has(builder);
         }
 
@@ -850,23 +843,23 @@ public abstract class TopicCommand {
             return options.has(option) ? Optional.of(options.valuesOf(option)) : Optional.of(defaultValue);
         }
 
-        public Boolean hasCreateOption() {
+        public boolean hasCreateOption() {
             return has(createOpt);
         }
 
-        public Boolean hasAlterOption() {
+        public boolean hasAlterOption() {
             return has(alterOpt);
         }
 
-        public Boolean hasListOption() {
+        public boolean hasListOption() {
             return has(listOpt);
         }
 
-        public Boolean hasDescribeOption() {
+        public boolean hasDescribeOption() {
             return has(describeOpt);
         }
 
-        public Boolean hasDeleteOption() {
+        public boolean hasDeleteOption() {
             return has(deleteOpt);
         }
 
@@ -905,35 +898,35 @@ public abstract class TopicCommand {
                 return Optional.empty();
         }
 
-        public Boolean reportUnderReplicatedPartitions() {
+        public boolean reportUnderReplicatedPartitions() {
             return has(reportUnderReplicatedPartitionsOpt);
         }
 
-        public Boolean reportUnavailablePartitions() {
+        public boolean reportUnavailablePartitions() {
             return has(reportUnavailablePartitionsOpt);
         }
 
-        public Boolean reportUnderMinIsrPartitions() {
+        public boolean reportUnderMinIsrPartitions() {
             return has(reportUnderMinIsrPartitionsOpt);
         }
 
-        public Boolean reportAtMinIsrPartitions() {
+        public boolean reportAtMinIsrPartitions() {
             return has(reportAtMinIsrPartitionsOpt);
         }
 
-        public Boolean reportOverriddenConfigs() {
+        public boolean reportOverriddenConfigs() {
             return has(topicsWithOverridesOpt);
         }
 
-        public Boolean ifExists() {
+        public boolean ifExists() {
             return has(ifExistsOpt);
         }
 
-        public Boolean ifNotExists() {
+        public boolean ifNotExists() {
             return has(ifNotExistsOpt);
         }
 
-        public Boolean excludeInternalTopics() {
+        public boolean excludeInternalTopics() {
             return has(excludeInternalTopicOpt);
         }
 
@@ -952,10 +945,7 @@ public abstract class TopicCommand {
             CommandLineUtils.maybePrintHelpOrVersion(this, "This tool helps to create, delete, describe, or change a topic.");
 
             // should have exactly one action
-            long actions =
-                Arrays.asList(createOpt, listOpt, alterOpt, describeOpt, deleteOpt)
-                    .stream().filter(options::has)
-                    .count();
+            long actions = Stream.of(createOpt, listOpt, alterOpt, describeOpt, deleteOpt).filter(options::has).count();
             if (actions != 1)
                 CommandLineUtils.printUsageAndExit(parser, "Command must include exactly one action: --list, --describe, --create, --alter or --delete");
 
